added resume pdf

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -102,7 +102,7 @@ experiences:
         details: |
             -	FSlogix Automation Tool  
                 - led the team and designed various processes to manage the user profile and O365. 
-                - This is implemented FSlogix Automation Tool for around 90K users &
+                - This is implemented FSlogix Automation Tool for around 90K users 
 Grafana dashboard.
             -	Grafana dashboard 
                 - To build the dynamic GUI dashboard for various DB servers. 
