--- a/_data/data.yml
+++ b/_data/data.yml
@@ -62,25 +62,13 @@ education:
       - degree: BE in Computer Science
         university: Anna University
         time: 2012 - 2015
-        details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
+        details: 
             • Database Management Systems • Operating Systems • Artificial Intelligence
             • Object-oriented Programming • Web Technology • Data Structures
       - degree: Diploma in Computer science
         university: Tamilnadu polytechnic college (autonomous)
-        time: 2007 - 2011
-        details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
+        time: 2009 - 2012
+        details: 
 experiences:
     title: Experiences
     info:
